# Automatisches_Licht

./: .pre-commit-config.yaml  LICENSE  Readme.md  dev_requirements.txt  pyproject.toml  requirements.txt
src/nightlight/: _logging.py  config.py  config.yml  example_sound.py  light.py  main.py  sensor.py
